--- a/apps/uscope/index.html
+++ b/apps/uscope/index.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 
-<body>
+<body class="overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
